Build image doesnt support java9